Fix product component too narrow

--- a/src/front/style/_product.scss
+++ b/src/front/style/_product.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     box-shadow: 3px 3px 8px #ccc;
     background-color: #eee;
+    width: 100%;
     max-width: 32em;
     margin: 0 0.5em;
 
